--- a/ViteWithReactBasicSetup/src/Pages/Login/login.scss
+++ b/ViteWithReactBasicSetup/src/Pages/Login/login.scss
@@ -1,7 +1,7 @@
 .background {
   height: 100%;
   background-image: linear-gradient(rgba(0, 0, 0, 1), rgba(0, 0, 0, 0.6)),
-    url("../../assets/movies-background.jpg");
+    url("/assets/movies-background.jpg");
   background-size: cover;
   display: flex;
   flex-direction: column;
